--- a/css/_nav.css
+++ b/css/_nav.css
@@ -12,6 +12,10 @@
   
     /*修改類型*/
 	display: inline-block;
+
+	color: white;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 /*===============================*/
 .nav-number {
