--- a/css/_theme.css
+++ b/css/_theme.css
@@ -41,12 +41,14 @@
 	font-family: 'Alegreya Sans';
 }
 .site-logo-img {
-	width: 10vh; /*50px;*/
-	height: 10vh; /*50px;*/
+	width: 7vh; /*50px;*/
+	height: 7vh; /*50px;*/
 	background-image: url(../img/logo.png);
 	background-size: cover;
 	background-position: center center;
 }
+@media (max-width: 992px) {	.site-logo-text { display: none; } }
+@media (min-width: 992px) {	.site-logo-img { display: none; } }
 
 
 /* ------------ menu ------------ */
