--- a/css/_button.css
+++ b/css/_button.css
@@ -1,69 +1,21 @@
-/*一般*/
+/* E:link 還未連結過　*/
+/* E:visited 已經連結過 */
+/* E:hover 移至連結上　*/
+/* E:active 正在連結中　*/
+/* E:focus 正在聚焦中　*/
+
 .button {
-	color: #3E3E3E;
-	font-weight: 300;
-	background-color: #E2E2E2;
-	padding: 4px 10px;
 	display: inline-block;
-	border: none;
-	border-radius: 7px;
+	border-radius: 5px;
+	padding: 5px 10px;
+	background-color: #E2E2E2;
+	color: black;	
 }
-
+.button:visited {
+	color: black;
+}
 .button:hover {
-	background-color: #eee;
 	cursor: pointer;
-}
-
-/*綠色*/
-.button-green {
-	background-color: #21ba45;
-	color: #fff;
-}
-
-.button-green:hover {
-	background-color: #16ab39;
-	color: #fff;
-}
-
-/*藍色*/
-.button-blue {
-	background-color: #2196F3;
-	color: #fff;
-}
-
-.button-blue:hover {
-	background-color: #0c7cd5;
-	color: #fff;
-}
-
-/*紅色*/
-.button-red {
-	background-color: #db2828;
-	color: #fff;
-}
-
-.button-red:hover {
-	background-color: #d01919;
-	color: #fff;
-}
-
-/*暗色*/
-.button-dark {
-	background-color: #010101;
-	color: #fff;
-}
-
-.button-dark:hover {
-	background-color: #3C3C3C;
-	color: #fff;
-}
-
-/*lightseagreen*/
-.button-lightseagreen {
-	background-color: #4d4443;
-	color: lightgray;
-}
-.button-lightseagreen:hover {
-	background-color: #369fb2;
-	color: white;
+	background-color: #b23661;
+	color: white;	
 }
