--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url(_form.css);
 @import url(_media.css);
 @import url(_table.css);
+@import url(_toggle.css);
 
 /* 合併模組 */
 @import url(_nav.css);
