--- a/css/_toggle.css
+++ b/css/_toggle.css
@@ -4,24 +4,23 @@
 /* five ways to change text */
 /*https://css-tricks.com/swapping-out-text-five-different-ways/*/
 
-/* ☰ animated to X */
-/*https://codepen.io/anon/pen/gZRzNd*/
-/*https://codepen.io/agragregra/pen/bEbbmZ*/
-/*https://codepen.io/riogrande/pen/emdjLR*/
-/*http://jsfiddle.net/uwozd36q/1/*/
+/* ☰ animated to X *//*
+https://codepen.io/anon/pen/gZRzNd
+https://codepen.io/agragregra/pen/bEbbmZ
+https://codepen.io/riogrande/pen/emdjLR
+http://jsfiddle.net/uwozd36q/1/*/
 
-/* TRIGRAM ☰ */
-.toggle-button::after {
 
-  content:'\2630';
+.toggle-switch::after {
+
+  content:'\2630'; /* TRIGRAM ☰ */
   padding: 0px 30px;
   font-size: 20px;
   color: white;
 }
-/* MULTIPLICATION X */
-.toggle-button.open::after { 
+.toggle-switch.open::after { 
 
-  content: '\2715';
+  content: '\2715'; /* MULTIPLICATION X */
 }
 
 
