--- a/css/_theme.css
+++ b/css/_theme.css
@@ -1,10 +1,10 @@
 /* -------------------------------- */
 /* custom bgcolor & height */
-/* header */
+/* header、menu、toggle */
 /* menu */
 /* banner */
 /* main */
-/* accordion */
+/* sidebar */
 /* card */
 /* footer */ 
 /* content */
@@ -12,6 +12,7 @@
 /* -------------------------------- */
 
 /* custom bgcolor */
+/*.site-header-bg { background-color: #4d4443; }*/
 .site-header-bg { background-color: #4d4443; }
 /*.site-main-bg { background-color: green;  }*/
 .site-footer-bg { background-color: #f7f7f7; }
@@ -27,7 +28,10 @@
 	z-index: 99;
 	padding-top: 20px;
 	padding-bottom: 20px;
+
+	background-color: #4d4443;
 }
+
 .site-logo {
 	display: inline-block;
 }
@@ -50,7 +54,8 @@
 @media (min-width: 992px) {	.site-logo-img { display: none; } }
 
 /* ------------ menu ------------ */
-.site-menu, .site-menu-toggle {
+/*.site-menu, .site-menu-toggle {*/
+.site-menu, .site-menu-toggle-button {
 	font-family: 'Alegreya Sans';
 	/*垂直置中*/
 	position: absolute;
@@ -72,9 +77,22 @@
 .site-menu-btn:active { color: gold; }
 .site-menu-btn:focus { color: gold; }
 
-/* Desktop */
-@media (min-width: 992px) {	.site-menu-toggle { display: none; } }
-@media (max-width: 992px) {	.site-menu { display: none; } }
+/* Desktop and larger */
+@media (min-width: 992px) {	
+	.site-menu-toggle { display: none; } 
+	/*.site-menu-toggle-content { display: none; }*/
+}
+
+/* Desktop and smaller */
+@media (max-width: 992px) {	
+	.site-menu { display: none; } 
+	.site-menu-toggle-content { display: none; }
+}
+
+.site-menu-toggle-content {
+	margin: 20px auto -40px;
+}
+
 
 
 /* ------------ toggle ------------ */
@@ -94,11 +112,13 @@
 	min-height: calc(100vh - 70px); 
 }
 
-/* ------------ accordion ------------ */
+/* ------------ sitebar ------------ */
 /* Phone */
-@media (max-width: 768px ) { .site-sidebar-menu { display: none; } }
+/*@media (max-width: 768px ) { .site-sidebar-menu { display: none; } }*/
 /* Tablet */
-@media (min-width: 768px) { ..site-sidebar-menu { display: none; } }
+/*@media (min-width: 768px) { .site-sidebar-menu { display: none; } }*/
+
+@media (max-width: 992px) { .site-sidebar-menu { display: none; } }
 
 /* ------------ card ------------ */
 .site-card img {
