--- a/css/_theme.css
+++ b/css/_theme.css
@@ -1,25 +1,23 @@
 /* -------------------------------- */
-/* custom bgcolor & height */
-/* header、menu、toggle */
-/* menu */
-/* banner */
-/* main */
-/* sidebar */
-/* card */
+/* custom bgcolor */
+
+/* header (logo) */
+/* header (menu) */
+/* main (sidebar)*/
+/* main (card) */
 /* footer */ 
 /* content */
 /* custom button */
-/* -------------------------------- */
 
-/* custom bgcolor */
-/*.site-header-bg { background-color: #4d4443; }*/
-.site-header-bg { background-color: #4d4443; }
-/*.site-main-bg { background-color: green;  }*/
-.site-footer-bg { background-color: #f7f7f7; }
-/*.content-bg { background-color: green; }*/
-/*.sidebar-bg { background-color: #; }*/
 
-/* ------------ header ------------ */
+/* ------------ custom bgcolor ------------ */
+.site-header-bg { background-color: #565656 ; }
+.site-main-bg, 
+.site-sidebar-menu-bg .panel { background-color: #f5e1e0; }
+.site-footer-bg { background-color: #c9b4b2; }
+.site-footer-bg { background-color: #d5c5c4; }
+
+/* ------------ header (logo) ------------ */
 .site-header {
 	width: 100%;
 	top: 0;
@@ -28,22 +26,17 @@
 	z-index: 99;
 	padding-top: 20px;
 	padding-bottom: 20px;
-
-	background-color: #4d4443;
 }
-
 .site-logo {
+
 	display: inline-block;
 }
 .site-logo-text {
 	font-family: 'Alegreya Sans';
 	font-size: 24px; 
 	font-weight: bolder;
-	/*font-variant: small-caps;*/
 }
 .site-logo-img {
-	width: 8vh; /*50px;*/
-	height: 8vh; /*50px;*/
 	width: 50px;
 	height: 50px;
 	background-image: url(../img/logo.png);
@@ -53,12 +46,9 @@
 @media (max-width: 992px) {	.site-logo-text { display: none; } }
 @media (min-width: 992px) {	.site-logo-img { display: none; } }
 
-/* ------------ menu ------------ */
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-menu { display: block; }
-
-/*.site-menu, .site-menu-toggle {*/
-.site-menu, .site-menu-toggle-button {
+/* ------------ header (menu) ------------ */
+/* main menu */
+.site-menu {
 	font-family: 'Alegreya Sans';
 	/*垂直置中*/
 	position: absolute;
@@ -67,65 +57,55 @@
 	/*水平置右*/
 	right: 2%;
 }
-.site-menu .nav-link,  
-/*.site-menu-toggle .nav-link, { 
-	padding: 0px 15px 0px 15px; 
-	color: white; 
-	font-size: 28px;
-}*/
-.site-menu-btn { background-color: transparent; border: none; }
-/*.site-menu-btn:link { color: white; }*/
-/*.site-menu-btn:visited { color: white; }*/
-.site-menu-btn:hover { color: gold; }
-.site-menu-btn:active { color: gold; }
-.site-menu-btn:focus { color: gold; }
+.site-menu .dropdown:hover .dropdown-menu { 
 
+	display: block; 
+}
+.site-menu-btn { 
+	background-color: transparent; 
+	border: none; 
+}
+.site-menu-btn:hover { 
 
+	color: gold; 
+}
+/* mobile menu */
+.site-menu-toggle-button {
+	font-family: 'Alegreya Sans';
+	/*垂直置中*/
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	/*水平置右*/
+	right: 2%;
+}
+.site-menu-toggle-content {
 
-/* Desktop and larger */
-@media (min-width: 992px) {	
-	.site-menu-toggle { display: none; } 
-	/*.site-menu-toggle-content { display: none; }*/
+	margin: 20px auto 0px;
 }
 
-/* Desktop and smaller */
+@media (min-width: 992px) {	
+	.site-menu-toggle { display: none; } 
+}
 @media (max-width: 992px) {	
 	.site-menu { display: none; } 
 	.site-menu-toggle-content { display: none; }
 }
 
-.site-menu-toggle-content {
-	margin: 20px auto -40px;
-}
-
-
-
-/* ------------ toggle ------------ */
-/**/
-/**/
-/* -------------------------------- */
-
-/* ------------ main ------------ */
+/* ------------ main (sidebar)------------ */
 .site-main {
 	position: relative;
 	z-index: 1;
 	padding: 50px 0px 50px 0px;
-
 	/* sticky footer */
-	/* https://aotu.io/notes/2017/04/13/Sticky-footer/index.html */
-	/* 減掉footer高度70px */
-	min-height: calc(100vh - 70px); 
+	min-height: calc(100vh - 60px - 85px);
 }
-
-/* ------------ sitebar ------------ */
-/* Phone */
-/*@media (max-width: 768px ) { .site-sidebar-menu { display: none; } }*/
-/* Tablet */
-/*@media (min-width: 768px) { .site-sidebar-menu { display: none; } }*/
-
 @media (max-width: 992px) { .site-sidebar-menu { display: none; } }
 
-/* ------------ card ------------ */
+/* ------------ main (card) ------------ */
+.site-card .card-content {
+	background-color: white;
+}
 .site-card img {
 	width: 100%;
 	height: 450px;
@@ -134,6 +114,18 @@
 	border-radius: 3px;
     background: lightgray;
     padding: 2px 5px;
+}
+
+.button-lightseagreen {
+	background-color: #4d4443;
+	color: lightgray;
+}
+.button-lightseagreen:hover {
+	background-color: #369fb2;
+	color: white;
+}
+a#card-button.button { 
+	font-size: 90%; 
 }
 /* Phone */
 @media (max-width: 768px ) { .img-fluid { object-fit: cover; } }
@@ -144,24 +136,16 @@
 /* Large Desktop */
 @media (min-width: 1200px) { .img-fluid { object-fit: cover; margin-left:0; } #card-img { width:50%; } }
 
-.button-lightseagreen {
-	background-color: #4d4443;
-	color: lightgray;
-}
-.button-lightseagreen:hover {
-	background-color: #369fb2;
-	color: white;
-}
-
 /* ------------ footer ------------ */
 .site-footer {
 	position: relative;
 	z-index: 1;
 	padding: 15px 0px 15px 0px;
 	/*height: 70px;*/
+	height: 60px;
 }
 .site-footer span {	
-	padding: 10px;
+	padding: 5px;
 	font-size: 14px;
 	display: inline-block;
 }
