--- a/css/_theme.css
+++ b/css/_theme.css
@@ -1,14 +1,9 @@
-/* -------------------------------- */
 /* custom bgcolor */
-
 /* header (logo) */
 /* header (menu) */
 /* main (sidebar)*/
 /* main (card) */
 /* footer */ 
-/* content */
-/* custom button */
-
 
 /* ------------ custom bgcolor ------------ */
 .site-header-bg { background-color: #565656 ; }
@@ -103,30 +98,30 @@
 @media (max-width: 992px) { .site-sidebar-menu { display: none; } }
 
 /* ------------ main (card) ------------ */
-.site-card .card-content {
-	background-color: white;
-}
 .site-card img {
 	width: 100%;
 	height: 450px;
 }
-#card-type {
-	border-radius: 3px;
-    background: lightgray;
-    padding: 2px 5px;
-}
+.site-card .card-content {
 
-.button-lightseagreen {
-	background-color: #4d4443;
-	color: lightgray;
+	background-color: white;
 }
-.button-lightseagreen:hover {
-	background-color: #369fb2;
-	color: white;
+.site-card #card-type {
+	color: darkslategray;
+	border: 1px darkgray solid;
+	border-radius: 2px;    
+    padding: 2px 5px;
+    margin: 0px 2px;
 }
-a#card-button.button { 
+.site-card .button {
+
 	font-size: 90%; 
 }
+.site-card .button:hover {
+
+	background-color: #9b0422;
+}
+
 /* Phone */
 @media (max-width: 768px ) { .img-fluid { object-fit: cover; } }
 /* Tablet */
@@ -141,7 +136,6 @@ a#card-button.button {
 	position: relative;
 	z-index: 1;
 	padding: 15px 0px 15px 0px;
-	/*height: 70px;*/
 	height: 60px;
 }
 .site-footer span {	
@@ -149,12 +143,9 @@ a#card-button.button {
 	font-size: 14px;
 	display: inline-block;
 }
-/* Phone & Tablet */
+/* Phone */
 @media (max-width: 768px ) { .site-footer span { margin: auto; display: table; } }
+/* Tablet */
 @media (min-width: 768px) { .site-footer span { margin: auto; display: table; } }
-/*Desktop & Large Desktop */
+/*Desktop+ */
 @media (min-width: 992px) { .site-footer span { float: right; } }
-@media (min-width: 1200px) { .site-footer span { float: right; } }
-
-
-
